--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="password">Password</string>
     <string name="sign_in">Sign In</string>
     <string name="facebook">Facebook</string>
+    <string name="title_activity_login">LoginActivity</string>
 </resources>
